@@ -46,6 +46,7 @@ CAY-1627 CayenneModeler: collection types for to-many relationships are not save
 CAY-1628 ClassCastException when using java.util.Set or java.util.Map as collection type for to-many relationship
 CAY-1631 Oracle - passing blobs as stored procedure parameters
 CAY-1632 CayenneModeler: flattened relationship paths are not fully displayed
+CAY-1648 [PATCH] ValidationException throws format exception if error message contains percent sign
 
 ----------------------------------
 Release: 3.1 M3
